Fix integration tests for good now.